--- a/popcount-benchmark.cabal
+++ b/popcount-benchmark.cabal
@@ -18,7 +18,7 @@ benchmark benchmark
     , tasty-bench
     , deepseq
 
-  ghc-options:      -fproc-alignment=64 -with-rtsopts=-A32m -Wall
+  ghc-options:      -fproc-alignment=64 -with-rtsopts=-A32m -Wall -O2
   default-language: GHC2021
   include-dirs:     cbits
   includes:         popcount.h
