--- a/popcount-benchmark.cabal
+++ b/popcount-benchmark.cabal
@@ -23,4 +23,4 @@ benchmark benchmark
   include-dirs:     cbits
   includes:         popcount.h
   c-sources:        cbits/popcount.c
-  cc-options:       -O2 -mbmi
+  cc-options:       -O2 -mbmi -g
